unpackaged/main/default/objects/Interest_List__c/Interest_List__c.object-meta.xml
<CustomObject>
    <label>Interest List</label>
    <nameField>
        <label>Interest List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interest List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>