unpackaged/main/default/objects/Interest_List__c/fields/Contact__c.field-meta.xml
<CustomField>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interest List</relationshipLabel>
        <relationshipName>Interest_List</relationshipName>
        <type>Lookup</type>
    </CustomField>