unpackaged/main/default/objects/Interest_List__c/fields/Has_been_converted__c.field-meta.xml
<CustomField>
        <fullName>Has_been_converted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has been converted</label>
        <type>Checkbox</type>
    </CustomField>