unpackaged/main/default/objects/Interest_List__c/fields/Interest_Status__c.field-meta.xml
<CustomField>
        <fullName>Interest_Status__c</fullName>
        <label>Interest Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
                <value>
                    <fullName>Responded Nurture</fullName>
                </value>
                <value>
                    <fullName>Unattended Tour</fullName>
                </value>
                <value>
                    <fullName>Confirmed Appointment</fullName>
                </value>
                <value>
                    <fullName>Missed Appointment</fullName>
                </value>
                <value>
                    <fullName>Site Visited</fullName>
                </value>
                <value>
                    <fullName>Contingent</fullName>
                </value>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Prequalified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>