unpackaged/main/default/objects/Interest_List__c/fields/Is_Realtor__c.field-meta.xml
<CustomField>
        <fullName>Is_Realtor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Realtor</label>
        <type>Checkbox</type>
    </CustomField>