unpackaged/main/default/objects/Interest_List__c/fields/Is_Web_lead__c.field-meta.xml
<CustomField>
        <fullName>Is_Web_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Web lead</label>
        <type>Checkbox</type>
    </CustomField>