unpackaged/main/default/objects/Interest_List__c/fields/Lead__c.field-meta.xml
<CustomField>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Interest List</relationshipLabel>
        <relationshipName>Interest_List</relationshipName>
        <type>Lookup</type>
    </CustomField>