unpackaged/main/default/objects/Interest_List__c/fields/Lead_source__c.field-meta.xml
<CustomField>
        <fullName>Lead_source__c</fullName>
        <label>Lead source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Austin Relocation Guide</fullName>
                </value>
                <value>
                    <fullName>BDX</fullName>
                </value>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>Brookfield Website</fullName>
                </value>
                <value>
                    <fullName>Builder Boost</fullName>
                </value>
                <value>
                    <fullName>Customer Event</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Driving By</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Facebook Lead Ad</fullName>
                </value>
                <value>
                    <fullName>Hot On Homes</fullName>
                </value>
                <value>
                    <fullName>Interactive Sales Tool</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Landing Page</fullName>
                </value>
                <value>
                    <fullName>Lightbox</fullName>
                </value>
                <value>
                    <fullName>Live Chat</fullName>
                </value>
                <value>
                    <fullName>Master Plan/Community</fullName>
                </value>
                <value>
                    <fullName>Newspaper/Magazine</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paid Search</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>PCR</fullName>
                </value>
                <value>
                    <fullName>Phone Inquiry</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>