unpackaged/main/default/objects/Interest_List__c/fields/Loss_Reason__c.field-meta.xml
<CustomField>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lot Transfer / Lot Assignment</fullName>
                </value>
                <value>
                    <fullName>Correction</fullName>
                </value>
                <value>
                    <fullName>Contingency Expiration</fullName>
                </value>
                <value>
                    <fullName>Loan Denial</fullName>
                </value>
                <value>
                    <fullName>Appraisal Issue</fullName>
                </value>
                <value>
                    <fullName>Right of Rescission</fullName>
                </value>
                <value>
                    <fullName>Medical Reasons</fullName>
                </value>
                <value>
                    <fullName>Changed Mind</fullName>
                </value>
                <value>
                    <fullName>Change in Employment / Relocation</fullName>
                </value>
                <value>
                    <fullName>Change in Marital Status</fullName>
                </value>
                <value>
                    <fullName>Unsatisfied with Product</fullName>
                </value>
                <value>
                    <fullName>Homesite Conditions</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Concerns with Disclosure</fullName>
                </value>
                <value>
                    <fullName>Purchased with Competitor</fullName>
                </value>
                <value>
                    <fullName>Discontinued Product</fullName>
                </value>
                <value>
                    <fullName>Offer Not Accepted</fullName>
                </value>
                <value>
                    <fullName>Nonperformance</fullName>
                </value>
                <value>
                    <fullName>Material Out of Stock</fullName>
                </value>
                <value>
                    <fullName>.Cost Objections</fullName>
                </value>
                <value>
                    <fullName>.Just Looking</fullName>
                </value>
                <value>
                    <fullName>.Not Interested</fullName>
                </value>
                <value>
                    <fullName>.No Response</fullName>
                </value>
                <value>
                    <fullName>.Out of Market</fullName>
                </value>
                <value>
                    <fullName>.Timeline</fullName>
                </value>
                <value>
                    <fullName>.Other Builder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>