unpackaged/main/default/objects/Interest_List__c/fields/Marketing_Community__c.field-meta.xml
<CustomField>
        <fullName>Marketing_Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Community</label>
        <referenceTo>Marketing_Community__c</referenceTo>
        <relationshipLabel>Interest List</relationshipLabel>
        <relationshipName>Interest_List</relationshipName>
        <type>Lookup</type>
    </CustomField>