unpackaged/main/default/objects/Interest_List__c/fields/Rank__c.field-meta.xml
<CustomField>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Ready, Willing, Able</fullName>
                </value>
                <value>
                    <fullName>B - Two of These</fullName>
                </value>
                <value>
                    <fullName>C - Ready or Willing or Able</fullName>
                </value>
                <value>
                    <fullName>D - Cold</fullName>
                </value>
                <value>
                    <fullName>M - Marketing Only</fullName>
                </value>
                <value>
                    <fullName>W - Web Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>