unpackaged/main/default/objects/Interest_List__c/fields/Realtor__c.field-meta.xml
<CustomField>
        <fullName>Realtor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Realtor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Real_Estate_Agent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interest List (Realtor)</relationshipLabel>
        <relationshipName>Interest_List1</relationshipName>
        <type>Lookup</type>
    </CustomField>