unpackaged/main/default/objects/Interest_List__c/fields/Sales_Office__c.field-meta.xml
<CustomField>
        <fullName>Sales_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Office</label>
        <referenceTo>Sales_Office__c</referenceTo>
        <relationshipLabel>Interest List</relationshipLabel>
        <relationshipName>Interest_List</relationshipName>
        <type>Lookup</type>
    </CustomField>