unpackaged/main/default/objects/Interest_List__c/fields/Stage__c.field-meta.xml
<CustomField>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Lead Lost</fullName>
                </value>
                <value>
                    <fullName>Triage for Marketing</fullName>
                    <isActive>false</isActive>
                    <label>Triage for Marketing</label>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                    <isActive>false</isActive>
                    <label>Unqualified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>