unpackaged/main/default/objects/Interest_List__c/fields/Subdivision__c.field-meta.xml
<CustomField>
        <fullName>Subdivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Subdivision__c</referenceTo>
        <relationshipLabel>Interest List</relationshipLabel>
        <relationshipName>Interest_List</relationshipName>
        <type>Lookup</type>
    </CustomField>