unpackaged/main/default/objects/Interest_List__c/recordTypes/Alberta_Interest_List.recordType-meta.xml
<RecordType>
        <fullName>Alberta_Interest_List</fullName>
        <active>true</active>
        <label>Alberta Interest List</label>
    </RecordType>