unpackaged/main/default/objects/Interest_List__c/recordTypes/Denver_Interest_List.recordType-meta.xml
<RecordType>
        <fullName>Denver_Interest_List</fullName>
        <active>true</active>
        <label>Denver Interest List</label>
    </RecordType>