unpackaged/main/default/objects/Interest_List__c/recordTypes/NorCal_Interest_List.recordType-meta.xml
<RecordType>
        <fullName>NorCal_Interest_List</fullName>
        <active>true</active>
        <label>NorCal Interest List</label>
    </RecordType>