unpackaged/main/default/objects/Interest_List__c/recordTypes/SoCal_Interest_List.recordType-meta.xml
<RecordType>
        <fullName>SoCal_Interest_List</fullName>
        <active>true</active>
        <label>SoCal Interest List</label>
    </RecordType>