unpackaged/main/default/objects/Interest_List__c/recordTypes/Texas_Interest_List.recordType-meta.xml
<RecordType>
        <fullName>Texas_Interest_List</fullName>
        <active>true</active>
        <label>Texas Interest List</label>
    </RecordType>