unpackaged/main/default/objects/Interest_List__c/recordTypes/Toronto_Interest_List.recordType-meta.xml
<RecordType>
        <fullName>Toronto_Interest_List</fullName>
        <active>true</active>
        <label>Toronto Interest List</label>
    </RecordType>