unpackaged/main/default/objects/Interest_List__c/recordTypes/Washington_Interest_List.recordType-meta.xml
<RecordType>
        <fullName>Washington_Interest_List</fullName>
        <active>true</active>
        <label>Washington Interest List</label>
    </RecordType>