unpackaged/main/default/objects/Interest_List__c/listViews/A_Leads.listView-meta.xml
<ListView>
        <fullName>A_Leads</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Rank__c</columns>
        <columns>Stage__c</columns>
        <columns>Has_been_converted__c</columns>
        <columns>Is_Web_lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rank__c</field>
            <operation>equals</operation>
            <value>"A - Ready, Willing, Able"</value>
        </filters>
        <label>A Leads</label>
    </ListView>