unpackaged/main/default/objects/Interest_List__c/listViews/B_C_Leads.listView-meta.xml
<ListView>
        <fullName>B_C_Leads</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Rank__c</columns>
        <columns>Stage__c</columns>
        <columns>Has_been_converted__c</columns>
        <columns>Is_Web_lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rank__c</field>
            <operation>equals</operation>
            <value>B - Two of These,C - Ready or Willing or Able</value>
        </filters>
        <label>B, C Leads</label>
    </ListView>