unpackaged/main/default/objects/Interest_List__c/listViews/Calgary_Interest_List.listView-meta.xml
<ListView>
        <fullName>Calgary_Interest_List</fullName>
        <filterScope>Queue</filterScope>
        <label>Calgary</label>
        <queue>Calgary</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>