unpackaged/main/default/objects/Interest_List__c/listViews/DC_Admirals_Square_Interest_List.listView-meta.xml
<ListView>
        <fullName>DC_Admirals_Square_Interest_List</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Admirals Square</label>
        <queue>DC_Admirals_Square</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>