unpackaged/main/default/objects/Interest_List__c/listViews/DC_Bluffs_at_Sleeter_Lake_Interest_List.listView-meta.xml
<ListView>
        <fullName>DC_Bluffs_at_Sleeter_Lake_Interest_List</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Bluffs at Sleeter Lake</label>
        <queue>DC_Bluffs_at_Sleeter_Lake</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>