unpackaged/main/default/objects/Interest_List__c/listViews/DC_Heritage_Shores_Interest_List.listView-meta.xml
<ListView>
        <fullName>DC_Heritage_Shores_Interest_List</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Heritage Shores</label>
        <queue>DC_Heritage_Shores</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>