unpackaged/main/default/objects/Interest_List__c/listViews/DC_Mayfair_Interest_List.listView-meta.xml
<ListView>
        <fullName>DC_Mayfair_Interest_List</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Mayfair</label>
        <queue>DC_Mayfair</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>