unpackaged/main/default/objects/Interest_List__c/listViews/DC_Oakview_Village_Interest_List.listView-meta.xml
<ListView>
        <fullName>DC_Oakview_Village_Interest_List</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Oakview Village</label>
        <queue>DC_Oakview_Village</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>