unpackaged/main/default/objects/Interest_List__c/listViews/DC_Potomac_Shores_Interest_List.listView-meta.xml
<ListView>
        <fullName>DC_Potomac_Shores_Interest_List</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Potomac Shores</label>
        <queue>DC_Potomac_Shores</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>