unpackaged/main/default/objects/Interest_List__c/listViews/DC_Snowden_Bridge_Single_Family_Interest_List.listView-meta.xml
<ListView>
        <fullName>DC_Snowden_Bridge_Single_Family_Interest_List</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Snowden Bridge Single Family</label>
        <queue>DC_Snowden_Bridge_Single_Family</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>